# WorkCICD

./: CMakeLists.txt  Dockerfile  MIMXRT1060-EVKB_manifest_v3_10.xml  SW-Content-Register.txt
.github/workflows/: orionWorkflow.yml
cmakeModules/: CodeCoverage.cmake  CompileProject.cmake  ProjectFiles.cmake  ProjectTestFiles.cmake  ProjectToolchain.cmake  StaticCodeAnalysis.cmake  flags.cmake
component/lists/: component_lists_MIMXRT1062.cmake
component/serial_manager/: component_serial_manager_MIMXRT1062.cmake  component_serial_manager_uart_MIMXRT1062.cmake
component/uart/: component_lpuart_adapter_MIMXRT1062.cmake
device/: device_MIMXRT1062_CMSIS_MIMXRT1062.cmake  device_MIMXRT1062_system_MIMXRT1062.cmake
drivers/: driver_clock_MIMXRT1062.cmake  driver_common_MIMXRT1062.cmake  driver_igpio_MIMXRT1062.cmake  driver_iomuxc_MIMXRT1062.cmake  driver_lpuart_MIMXRT1062.cmake
freertos/freertos-kernel/: middleware_freertos-kernel_MIMXRT1062.cmake  middleware_freertos-kernel_extension_MIMXRT1062.cmake
scripts/: Build.sh  CodeCoverage.sh  FlashCode.sh  StaticCodeAnalysis.sh  UnitTests.sh
source/: CMakeLists.txt  Orion.cpp
source/coreSystem/include/: CoreSystem.h  CoreSystemConfiguration.h  CoreSystemServices.h  CoresSystemWatchdog.h
source/coreSystem/src/: CoreSystem.c  CoreSystemConfiguration.c  CoreSystemServices.c  CoreSystemWatchdog.c
test/: CMakeLists.txt  Makefile  OrionUnitTests
test/objs/home/odin/workspace/WorkCICD/test/: OrionTests.d
test/objs/home/odin/workspace/WorkCICD/test/tests/: template_test.d
test/tests/: template_test.cpp
utilities/: utility_debug_console_MIMXRT1062.cmake
xip/: driver_xip_board_evkbmimxrt1060_MIMXRT1062.cmake  driver_xip_device_MIMXRT1062.cmake
